[package]
name = "whitted"
version = "0.1.0-alpha"
edition = "2021"

[dependencies]
hex = "0.4.3"
hyper = { version = "0.14.18", features = ["server", "client", "http2"] }
ring = "0.16.20"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["rt", "tracing"] }
